Removed NSPrivacyTracking as my tracking is not used for ads

--- a/App/Storyboards/de.lproj/Settings.strings
+++ b/App/Storyboards/de.lproj/Settings.strings
@@ -95,4 +95,4 @@
 "B3h-nP-Vft.headerTitle" = "Matomo";
 "mjp-l0-QGe.text" = "Was ist Matomo? (Englisch)";
 "8l1-eo-Zei.text" = "Matomo Opt-Out";
-"B3h-nP-Vft.footerTitle" = "Ihre Aktivität dieser App wird bei inaktivem Schalter von der Matomo Webanalyse erfasst. Diesen Schalter aktivieren für Opt-Out.";
+"B3h-nP-Vft.footerTitle" = "Ihre Aktivität dieser App wird bei aktivem Schalter von der Matomo Webanalyse erfasst. Diesen Schalter abwählen für Opt-Out.";
